--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "1.3.4",
     "moment": "^2.30.1",
     "react": "18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "18.2.0",
     "react-icons": "^5.1.0",
     "react-image-gallery": "1.2.11",
