--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ant-design/icons": "5.0.1",
     "@reduxjs/toolkit": "1.9.3",
     "antd": "5.3.2",
+    "async-mutex": "0.4.0",
     "axios": "1.3.4",
     "moment": "^2.30.1",
     "react": "18.2.0",
